# glassbox-agentic-governance

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  GLASSBOX_MASTER_CONTEXT.md  LICENSE  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml  publish.yml
docs/: API.md  ARCHITECTURE.md  COMPLIANCE.md  DEPLOYMENT.md  GLOSSARY.md  GlassBox_Research_Paper_v2_0_Publication_Ready.md  README.md  USECASES.md
docs/API/: README.md  endpoint_reference.md
docs/COMPLIANCE/: README.md  requirements.md
docs/DEPLOYMENT/: README.md  deployment_reference.md  guide.md  performance_tuning.md
docs/DEVELOPMENT/: README.md  architecture.md  implementation_guide.md
docs/FEATURES/: README.md  enterprise.md  velocity_breaker_details.md  velocity_breaker_readme.md
docs/PROCESSES/: README.md  review_and_improvements.md  style_guide.md
docs/SEARCH/: README.md
docs/SECURITY/: README.md  hardening.md
docs/USER/: README.md  quick_start.md  troubleshooting.md  use_cases.md
docs/VERSIONS/: COMPARISON.md  README.md  latest
examples/: distributed_velocity_breaker.py  industry_examples.py
glassbox/: __init__.py
glassbox/adapters/: README.md  platforms.py  spark.py
glassbox/api/: README.md  app.py  middleware.py
glassbox/authoring/: nl_policy.py
glassbox/benchmarks/: run_benchmarks.py
glassbox/compliance/: README.md  catalogue.py  reporter.py
glassbox/events/: README.md  event_bus.py
glassbox/governance/: README.md  __init__.py  access_control.py  advanced_audit.py  anomaly_detector.py  api_gateway.py  audit_logger.py  bounded_queue.py  context_capture.py  currency.py  decision_replay.py  encryption.py  enterprise_pipeline.py  event_dispatcher.py  execution_trace.py  explainer.py  idempotency.py  logging_manager.py  models.py  multitenancy.py  pipeline.py  policy_engine.py  policy_parameters.py  request_context.py  retry_policy.py  risk_evaluator.py  schema_validator.py  simulator.py  stage_registry.py  threadpool_config.py  trust.py  velocity_breaker.py  write_ahead_log.py
glassbox/integrations/: README.md  adapters.py  extended_adapters.py  mcp_gateway.py  opa_adapter.py
glassbox/orchestration/: README.md  orchestrator.py
glassbox/rag/: README.md  governance.py
glassbox/rules/: README.md  hot_reload.py  rules_engine.py
glassbox/scenarios/: run_scenarios.py
glassbox/security/: README.md  sanitizer.py
glassbox/store/: README.md  database.py  database_abstraction.py  repository.py
glassbox/telemetry/: otel_exporter.py
glassbox/testing/: __init__.py  batch_runner.py
glassbox/workflow/: README.md  workflow_engine.py
scripts/: convert_to_pdf_and_diagrams.py  create_publication_word_doc.py  run_test_batches.py  validate.py
sdk/typescript/: index.ts  package.json
tests/: batch_manifest.json  conftest.py  test_advanced.py  test_api.py  test_batch_runner.py  test_comprehensive.py  test_core.py  test_edge_cases.py  test_enterprise.py  test_framework.py  test_glassbox.py  test_governance.py  test_hash_chain_tamper.py  test_integrations.py  test_load_stress_security.py  test_p1a.py  test_p1d.py  test_p2b.py  test_p2d.py  test_performance.py  test_regression.py  test_remediation.py  test_security.py  test_sqlite_repo.py  test_v1_features.py  test_velocity_breaker_invariants.py
